--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .title {
     text-align: center;
     margin: 0;
-    font-size: 8em;
+    font-size: 4em;
     font-family: "Helvetica";
     font-weight: normal;
     color: white;
@@ -67,4 +67,39 @@ button {
     font-size: 22px;
     cursor: pointer;
     margin: 5px;
+}
+
+#popup{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+#close{
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    cursor: pointer;
+}
+
+#popup-content {
+    font-family: Verdana;
+    background-color: #fff;
+    width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#image{
+    height: 100%; 
+    width: 100%;
 }
