--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ html,
 body {
     margin: 0;
     padding: 0px;
+    background-color: whitesmoke;
 }
 
 .main-header {
-    /* background-color: rgba(0, 0, 0, .3);
-     */
-     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-     /* width: 100%; */
-    padding-bottom: 10px;
     margin: 0 0 20px 0;
 }
 
 #top-buttons{
     padding-left: 50px;
+}
+
+#top-buttons button {
+    background-color: #e3c632;
 }
 
 #main{
@@ -25,17 +25,18 @@ body {
 .title {
     text-align: center;
     margin: 0;
-    font-size: 4em;
+    font-size: 3em;
     font-family: "Helvetica";
-    font-weight: normal;
-    color: grey;
+    font-weight: lighter;
+    color: rgba(0, 0, 0, 0.7);
     
 }
 
 #card-container {
     display: grid;
+    width: inherit;
+    
     grid-template-columns: repeat(4, 1fr);
-    /* gap: 1%; */
     margin: 20px;
 }
 
@@ -47,30 +48,27 @@ body {
 #right-section button{
     width: 100%;
 }
-#left-section {
-    margin: 0;
-    padding: 0;
-}
 
 .card {
-    /* display: flex;
-    align-items: end; */
     padding: 20px;
-
     width: 300px;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     margin: 5px;
 }
 
-.card .button {
-
+td{
+    font-family: Verdana;
+    font-size: 22px;
+    width: fit-content;
+    padding: 5px;
 }
 
+
+
 .card-content {
-    padding: 20px;
     font-family: "Verdana";
-    color: #777;
+    color: black;
 }
 
 .card-content h2{
@@ -82,6 +80,22 @@ body {
 
     margin-top: 0;
     font-size: 20px;
+}
+
+#edit-popup table{
+    width: 110%;
+}
+
+#edit-popup input{
+    width: auto;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    font-size: large;
+}
+
+#edit-popup button{
+    width: 100%;
 }
 
 .card-content p{
@@ -99,11 +113,6 @@ body {
 }
 
 
-․card :hover {
-    background-color: #555   ;
-}
-
-
 .card button {
     width: 100%;
     background-color: #055C9D;
@@ -112,7 +121,6 @@ body {
 button {
     min-width: 210px;
     text-align: center;
-    /* background-color: #666; */
     background-color: #055C9D;
     border: none;
     padding-left: 10px;
@@ -124,6 +132,7 @@ button {
     cursor: pointer;
     margin: 5px;
 }
+
 
 .popup{
     display: none;
@@ -146,7 +155,7 @@ button {
 .popup-content {
     font-family: Verdana;
     background-color: #fff;
-    width: 350px;
+    width: 450px;
     padding: 20px;
     border-radius: 10px;
     position: absolute;
@@ -160,16 +169,7 @@ button {
     width: 100%;
 }
 
-/* input{
-    display: block;
-    width: 100%;
-} */
-
-
-.sorting-menu-container {
-    position: relative;
-  }
-  
+ 
   .sorting-menu {
     display: block;
     position: absolute;
@@ -191,10 +191,8 @@ button {
 .dropdown-menu{
     display: none; 
     background-color: #fff;
-    /* border: 1px solid #ccc; */
-    width: 100%;
     border-radius: 5px;
-    padding: 5px; 
+    padding: 10px; 
 }
 
 .dropdown-menu label{
@@ -210,7 +208,6 @@ button {
 
 .dropdown-menu label input[type="checkbox"] {
     margin-right: 5px;
-    /* vertical-align: middle; */
 }
 
 .dropdown-menu.active{
@@ -222,12 +219,11 @@ button {
     margin-bottom: 5px;
 }
 
-#price-dropdown .dropdown-menu input {
+.dropdown-menu input {
     border: 1px solid grey;
     border-radius: 5px;
-    height: 20px;
-    width: 140px;
-    margin: 0 10px 0 0;
+    height: 30px;
+    width: 90%;
 }
 
 #filter-dropdown .dropdown-menu{
