--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    --main-font-size: 1vh;
+    --button-font-size: 4vh;
+}
+
+
 html,
 body {
     margin: 0;
@@ -5,12 +11,8 @@ body {
     background-color: whitesmoke;
 }
 
-.main-header {
-    margin: 0 0 20px 0;
-}
-
 #top-buttons{
-    padding-left: 50px;
+    margin-left: 1.8vw;
 }
 
 #top-buttons button {
@@ -24,7 +26,7 @@ body {
 
 .title {
     text-align: center;
-    margin: 0;
+    margin: 0.5vh;
     font-size: 3em;
     font-family: "Helvetica";
     font-weight: lighter;
@@ -32,207 +34,54 @@ body {
     
 }
 
-#card-container {
-    display: grid;
-    width: inherit;
-    
-    grid-template-columns: repeat(4, 1fr);
-    margin: 20px;
-}
-
 #right-section{
-    width: 310px;
-    padding: 20px;
+    width: 17vw;
+    /* padding: 20px; */
 }
 
 #right-section button{
     width: 100%;
 }
 
-.card {
-    padding: 20px;
-    width: 300px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-    margin: 5px;
-}
+
 
 td{
     font-family: Verdana;
-    font-size: 22px;
+    font-size: var(--main-font-size);
     width: fit-content;
-    padding: 5px;
-}
-
-
-
-.card-content {
-    font-family: "Verdana";
-    color: black;
-}
-
-.card-content h2{
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    margin-top: 0;
-    font-size: 20px;
-}
-
-#edit-popup table{
-    width: 110%;
-}
-
-#edit-popup input{
-    width: auto;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    font-size: large;
-}
-
-#edit-popup button{
-    width: 100%;
-}
-
-.card-content p{
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical; 
-    overflow: hidden; 
-    text-overflow: ellipsis;
-}
-
-.card img {
-    width: 100%;
-    border-radius: 5px;
-    height: auto;
-}
-
-
-.card button {
-    width: 100%;
-    background-color: #055C9D;
+    /* padding: 5px; */
 }
 
 button {
-    min-width: 210px;
+    min-width: 10vw;
     text-align: center;
     background-color: #055C9D;
     border: none;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 40px;
+    height: 4vh;
     border-radius: 5px;
     color: white;
-    font-size: 22px;
+    font-size: 4 * var(--button-font-size);
     cursor: pointer;
-    margin: 5px;
+    margin: 0.1vw;
 }
 
 
-.popup{
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
+td{
+    font-size: 1.5 * var(--main-font-size);
 }
 
-.close{
-    position: absolute; 
-    top: 10px; 
-    right: 10px; 
-    cursor: pointer;
-}
-
-.popup-content {
-    font-family: Verdana;
-    background-color: #fff;
-    width: 450px;
-    padding: 20px;
-    border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.popup-image{
-    height: 100%; 
-    width: 100%;
-}
-
- 
-  .sorting-menu {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .toggle-button {
-    padding: 5px 10px;
-    border: 1px solid #ccc;
-    background-color: #f0f0f0;
-    cursor: pointer;
-  }
-  
-.dropdown-menu{
-    display: none; 
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 10px; 
-}
-
-.dropdown-menu label{
-    display: block;
-    height: 40px;
-    font-family: Verdana;
-    font-size: large;
-}
-
-.dropdown-menu label:hover{
-    background-color: #f0f0f0;
-}
-
-.dropdown-menu label input[type="checkbox"] {
-    margin-right: 5px;
-}
-
-.dropdown-menu.active{
-    display:block;
-}
-
-#price-dropdown label{
-    display: block;
-    margin-bottom: 5px;
-}
-
-.dropdown-menu input {
-    border: 1px solid grey;
-    border-radius: 5px;
-    height: 30px;
-    width: 90%;
-}
-
-#filter-dropdown .dropdown-menu{
-    border: none;
-    box-shadow: none;
-    padding: 0px;
-}
 
 input[type='radio'], input[type='checkbox']{
     width: 20px;
     height: 20px;
+}
+
+
+#searchBox {
+    width: 20vw;
+    height: 3.5vh;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.7);
+    font-size: 1.5 * var(--main-font-size);
+    font-family: Verdana;
 }
